Fix scaling problems on mobile

--- a/static/css/rant.css
+++ b/static/css/rant.css
@@ -66,59 +66,6 @@ h4
   font-size: 3em;
 }
 
-@media screen and (orientation: landscape)
-{
-  #container
-  {
-    margin: 0 auto;
-    max-width: 14in;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  #container > *
-  {
-    margin-left: 1in;
-    margin-right: 1in;
-  }
-
-  #container > h1
-  {
-    margin-bottom: 1em;
-  }
-}
-
-@media screen and (orientation: portrait)
-{
-  .module
-  {
-    font-size: 18pt;
-    margin: 1em 0;
-  }
-
-  #container
-  {
-    margin: 0 auto;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  #container > *
-  {
-    margin-left: 1em;
-    margin-right: 1em;
-  }
-
-  #container > h1
-  {
-    margin-bottom: 0.1em;
-  }
-}
-
 .feature
 {
   
@@ -212,4 +159,67 @@ h1 + .module
 .separator
 {
   margin: 3em 0;
+}
+
+@media screen and (orientation: landscape)
+{
+  #container
+  {
+    margin: 0 auto;
+    max-width: 14in;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #container > *
+  {
+    margin-left: 1in;
+    margin-right: 1in;
+  }
+
+  #container > h1
+  {
+    margin-bottom: 1em;
+  }
+}
+
+@media screen and (orientation: portrait)
+{
+  .module
+  {
+    font-size: 18pt;
+    margin: 0.25em 0;
+  }
+
+  #container
+  {
+    margin: 0 auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #container > *
+  {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+
+  #container > h1
+  {
+    margin-bottom: 0.1em;
+  }
+
+  .button
+  {
+    border-width: 2px;
+  }
+
+  .feature > h3 > i
+  {
+    margin-right: .8em;  
+  }
 }
